--- a/doc/FAQ
+++ b/doc/FAQ
@@ -97,7 +97,7 @@ Q: How can i get an email with each execution of a task as in Unix?
 
 A: To do so you need to set the following parameters to the right value:
 
-org.jcrontab.sendMail.to=iolalla@yahoo.com
+org.jcrontab.sendMail.to=iolalla@gmail.com
 org.jcrontab.sendMail.from=jcrontab@yoursystem.com
 org.jcrontab.sendMail.smtp.host=smtp.yahoo.com
 org.jcrontab.sendMail.smtp.user= yourSMTPusername
@@ -122,5 +122,5 @@ A:   No, the classes only should have a static method, a default constructor or 
 
 Q: From inside an application server how can I schedule a class? 
 
-A:   The model actually is designed to do so using CrontabEntryDAO.getInstance().add(CrontabEntryBean ceb); This will add the Task and will refresh the list of tasks.  If you want to execute only a task one time at any moment can use Crontab.newTask() method, but this method will be replaced with smth like AT to do a single execution of a Task in the near future (?¿?¿)
+A:   The model actually is designed to do so using CrontabEntryDAO.getInstance().add(CrontabEntryBean ceb); This will add the Task and will refresh the list of tasks.  If you want to execute only a task one time at any moment can use Crontab.newTask() method, but this method will be replaced with smth like AT to do a single execution of a Task in the near future (?ï¿½?ï¿½)
 
